--- a/lib/gui.ui
+++ b/lib/gui.ui
@@ -39,154 +39,6 @@
    <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="layoutWidget_4">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>390</y>
-      <width>411</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <layout class="QGridLayout" name="gridFuerzas">
-     <item row="0" column="5">
-      <widget class="QPushButton" name="pbtFuerza1">
-       <property name="maximumSize">
-        <size>
-         <width>60</width>
-         <height>20</height>
-        </size>
-       </property>
-       <property name="toolTip">
-        <string>Nada (G)</string>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">background: #fff;</string>
-       </property>
-       <property name="text">
-        <string>N</string>
-       </property>
-       <property name="shortcut">
-        <string>G</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="3">
-      <widget class="QPushButton" name="pbtFuerza3">
-       <property name="maximumSize">
-        <size>
-         <width>60</width>
-         <height>20</height>
-        </size>
-       </property>
-       <property name="toolTip">
-        <string>Mano Media (D)</string>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">background: #70bde7;</string>
-       </property>
-       <property name="text">
-        <string>MM</string>
-       </property>
-       <property name="shortcut">
-        <string>D</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
-      <widget class="QPushButton" name="pbtFuerza4">
-       <property name="maximumSize">
-        <size>
-         <width>60</width>
-         <height>20</height>
-        </size>
-       </property>
-       <property name="toolTip">
-        <string>Mano Fuerte (S)</string>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">background: #0971b8</string>
-       </property>
-       <property name="text">
-        <string>MF</string>
-       </property>
-       <property name="shortcut">
-        <string>S</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QPushButton" name="pbtFuerza5">
-       <property name="maximumSize">
-        <size>
-         <width>60</width>
-         <height>20</height>
-        </size>
-       </property>
-       <property name="toolTip">
-        <string>Mano Muy Fuerte (A)</string>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">background: #001d5a; color: #fff;</string>
-       </property>
-       <property name="text">
-        <string>MMF</string>
-       </property>
-       <property name="shortcut">
-        <string>A</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="4">
-      <widget class="QPushButton" name="pbtFuerza2">
-       <property name="maximumSize">
-        <size>
-         <width>60</width>
-         <height>20</height>
-        </size>
-       </property>
-       <property name="toolTip">
-        <string>Mano Débil (F)</string>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">background: #cfefff;</string>
-       </property>
-       <property name="text">
-        <string>MD</string>
-       </property>
-       <property name="shortcut">
-        <string>F</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item row="0" column="6">
-      <spacer name="horizontalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-    </layout>
-   </widget>
    <widget class="QGroupBox" name="grbJugador">
     <property name="geometry">
      <rect>
@@ -514,32 +366,13 @@
      </property>
     </widget>
    </widget>
-   <widget class="QPushButton" name="pbtPaso">
-    <property name="geometry">
-     <rect>
-      <x>145</x>
-      <y>440</y>
-      <width>156</width>
-      <height>27</height>
-     </rect>
-    </property>
-    <property name="toolTip">
-     <string>Siguiente mano (J)</string>
-    </property>
-    <property name="text">
-     <string>FLOP</string>
-    </property>
-    <property name="shortcut">
-     <string>J</string>
-    </property>
-   </widget>
    <widget class="QGroupBox" name="grbRevision">
     <property name="geometry">
      <rect>
       <x>445</x>
       <y>210</y>
       <width>135</width>
-      <height>230</height>
+      <height>265</height>
      </rect>
     </property>
     <property name="font">
@@ -815,7 +648,7 @@
      <property name="geometry">
       <rect>
        <x>5</x>
-       <y>165</y>
+       <y>185</y>
        <width>115</width>
        <height>13</height>
       </rect>
@@ -834,7 +667,7 @@
      <property name="geometry">
       <rect>
        <x>5</x>
-       <y>190</y>
+       <y>210</y>
        <width>125</width>
        <height>36</height>
       </rect>
@@ -982,7 +815,7 @@
      <property name="geometry">
       <rect>
        <x>5</x>
-       <y>175</y>
+       <y>195</y>
        <width>115</width>
        <height>13</height>
       </rect>
@@ -1002,7 +835,7 @@
      <property name="geometry">
       <rect>
        <x>5</x>
-       <y>160</y>
+       <y>175</y>
        <width>120</width>
        <height>3</height>
       </rect>
@@ -1123,6 +956,186 @@
      </property>
     </widget>
    </widget>
+   <widget class="QGroupBox" name="groupBox">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>385</y>
+      <width>430</width>
+      <height>90</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Valoración</string>
+    </property>
+    <widget class="QWidget" name="layoutWidget_4">
+     <property name="geometry">
+      <rect>
+       <x>85</x>
+       <y>20</y>
+       <width>255</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <layout class="QGridLayout" name="gridFuerzas">
+      <item row="0" column="5">
+       <widget class="QPushButton" name="pbtFuerza1">
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="toolTip">
+         <string>Nada (G)</string>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background: #fff;</string>
+        </property>
+        <property name="text">
+         <string>N</string>
+        </property>
+        <property name="shortcut">
+         <string>G</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="3">
+       <widget class="QPushButton" name="pbtFuerza3">
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="toolTip">
+         <string>Mano Media (D)</string>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background: #70bde7;</string>
+        </property>
+        <property name="text">
+         <string>MM</string>
+        </property>
+        <property name="shortcut">
+         <string>D</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="6">
+       <spacer name="horizontalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="0" column="0">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="0" column="4">
+       <widget class="QPushButton" name="pbtFuerza2">
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="toolTip">
+         <string>Mano Débil (F)</string>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background: #cfefff;</string>
+        </property>
+        <property name="text">
+         <string>MD</string>
+        </property>
+        <property name="shortcut">
+         <string>F</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QPushButton" name="pbtFuerza5">
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="toolTip">
+         <string>Mano Muy Fuerte (A)</string>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background: #001d5a; color: #fff;</string>
+        </property>
+        <property name="text">
+         <string>MMF</string>
+        </property>
+        <property name="shortcut">
+         <string>A</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QPushButton" name="pbtFuerza4">
+        <property name="maximumSize">
+         <size>
+          <width>60</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="toolTip">
+         <string>Mano Fuerte (S)</string>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background: #0971b8</string>
+        </property>
+        <property name="text">
+         <string>MF</string>
+        </property>
+        <property name="shortcut">
+         <string>S</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+    <widget class="QPushButton" name="pbtPaso">
+     <property name="geometry">
+      <rect>
+       <x>90</x>
+       <y>55</y>
+       <width>245</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="toolTip">
+      <string>Siguiente mano (J)</string>
+     </property>
+     <property name="text">
+      <string>FLOP</string>
+     </property>
+     <property name="shortcut">
+      <string>J</string>
+     </property>
+    </widget>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusBar">
    <property name="sizeGripEnabled">
@@ -1206,7 +1219,6 @@
   <tabstop>pbtFuerza3</tabstop>
   <tabstop>pbtFuerza2</tabstop>
   <tabstop>pbtFuerza1</tabstop>
-  <tabstop>pbtPaso</tabstop>
   <tabstop>lsvJugadas</tabstop>
   <tabstop>rdbFlopOk</tabstop>
   <tabstop>rdbFlopNoOk</tabstop>
