--- a/lib/gui.ui
+++ b/lib/gui.ui
@@ -138,9 +138,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>10</y>
+      <y>4</y>
       <width>570</width>
-      <height>200</height>
+      <height>206</height>
      </rect>
     </property>
     <property name="font">
@@ -156,7 +156,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>20</y>
+       <y>15</y>
        <width>550</width>
        <height>152</height>
       </rect>
@@ -315,7 +315,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>180</y>
+       <y>175</y>
        <width>325</width>
        <height>10</height>
       </rect>
@@ -331,7 +331,7 @@
      <property name="geometry">
       <rect>
        <x>350</x>
-       <y>180</y>
+       <y>175</y>
        <width>95</width>
        <height>10</height>
       </rect>
@@ -353,7 +353,7 @@
      <property name="geometry">
       <rect>
        <x>460</x>
-       <y>180</y>
+       <y>175</y>
        <width>100</width>
        <height>10</height>
       </rect>
@@ -363,6 +363,44 @@
      </property>
      <property name="text">
       <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>185</y>
+       <width>320</width>
+       <height>13</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>8 Outs</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_3">
+     <property name="geometry">
+      <rect>
+       <x>350</x>
+       <y>185</y>
+       <width>91</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>5 Outs</string>
      </property>
     </widget>
    </widget>
@@ -849,9 +887,9 @@
     <property name="geometry">
      <rect>
       <x>585</x>
-      <y>10</y>
+      <y>5</y>
       <width>226</width>
-      <height>465</height>
+      <height>470</height>
      </rect>
     </property>
     <property name="font">
@@ -870,9 +908,9 @@
      <property name="geometry">
       <rect>
        <x>5</x>
-       <y>20</y>
+       <y>15</y>
        <width>215</width>
-       <height>415</height>
+       <height>420</height>
       </rect>
      </property>
      <property name="font">
@@ -965,165 +1003,29 @@
       <height>90</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
     <property name="title">
      <string>Valoración</string>
     </property>
-    <widget class="QWidget" name="layoutWidget_4">
-     <property name="geometry">
-      <rect>
-       <x>85</x>
-       <y>20</y>
-       <width>255</width>
-       <height>30</height>
-      </rect>
-     </property>
-     <layout class="QGridLayout" name="gridFuerzas">
-      <item row="0" column="5">
-       <widget class="QPushButton" name="pbtFuerza1">
-        <property name="maximumSize">
-         <size>
-          <width>60</width>
-          <height>20</height>
-         </size>
-        </property>
-        <property name="toolTip">
-         <string>Nada (G)</string>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">background: #fff;</string>
-        </property>
-        <property name="text">
-         <string>N</string>
-        </property>
-        <property name="shortcut">
-         <string>G</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="3">
-       <widget class="QPushButton" name="pbtFuerza3">
-        <property name="maximumSize">
-         <size>
-          <width>60</width>
-          <height>20</height>
-         </size>
-        </property>
-        <property name="toolTip">
-         <string>Mano Media (D)</string>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">background: #70bde7;</string>
-        </property>
-        <property name="text">
-         <string>MM</string>
-        </property>
-        <property name="shortcut">
-         <string>D</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="6">
-       <spacer name="horizontalSpacer_2">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="0" column="0">
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="0" column="4">
-       <widget class="QPushButton" name="pbtFuerza2">
-        <property name="maximumSize">
-         <size>
-          <width>60</width>
-          <height>20</height>
-         </size>
-        </property>
-        <property name="toolTip">
-         <string>Mano Débil (F)</string>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">background: #cfefff;</string>
-        </property>
-        <property name="text">
-         <string>MD</string>
-        </property>
-        <property name="shortcut">
-         <string>F</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QPushButton" name="pbtFuerza5">
-        <property name="maximumSize">
-         <size>
-          <width>60</width>
-          <height>20</height>
-         </size>
-        </property>
-        <property name="toolTip">
-         <string>Mano Muy Fuerte (A)</string>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">background: #001d5a; color: #fff;</string>
-        </property>
-        <property name="text">
-         <string>MMF</string>
-        </property>
-        <property name="shortcut">
-         <string>A</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2">
-       <widget class="QPushButton" name="pbtFuerza4">
-        <property name="maximumSize">
-         <size>
-          <width>60</width>
-          <height>20</height>
-         </size>
-        </property>
-        <property name="toolTip">
-         <string>Mano Fuerte (S)</string>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">background: #0971b8</string>
-        </property>
-        <property name="text">
-         <string>MF</string>
-        </property>
-        <property name="shortcut">
-         <string>S</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-    </widget>
     <widget class="QPushButton" name="pbtPaso">
      <property name="geometry">
       <rect>
        <x>90</x>
-       <y>55</y>
+       <y>65</y>
        <width>245</width>
        <height>23</height>
       </rect>
+     </property>
+     <property name="font">
+      <font>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
      </property>
      <property name="toolTip">
       <string>Siguiente mano (J)</string>
@@ -1134,6 +1036,319 @@
      <property name="shortcut">
       <string>J</string>
      </property>
+    </widget>
+    <widget class="QWidget" name="layoutWidget">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>15</y>
+       <width>384</width>
+       <height>43</height>
+      </rect>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_3">
+      <item row="1" column="1">
+       <widget class="QComboBox" name="cbxOuts">
+        <property name="font">
+         <font>
+          <weight>50</weight>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="toolTip">
+         <string>Outs</string>
+        </property>
+        <item>
+         <property name="text">
+          <string>0</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>1</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>3</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>4</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>5</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>6</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>7</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>8</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>9</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>10</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>11</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>12</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>13</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>14</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>15</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>16</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>17</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>18</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>19</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>20</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLabel" name="label_4">
+        <property name="font">
+         <font>
+          <weight>50</weight>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Outs</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <layout class="QGridLayout" name="gridFuerzas">
+        <item row="0" column="5">
+         <widget class="QPushButton" name="pbtFuerza1">
+          <property name="maximumSize">
+           <size>
+            <width>60</width>
+            <height>20</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
+          <property name="toolTip">
+           <string>Nada (G)</string>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background: #fff;</string>
+          </property>
+          <property name="text">
+           <string>N</string>
+          </property>
+          <property name="shortcut">
+           <string>G</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="3">
+         <widget class="QPushButton" name="pbtFuerza3">
+          <property name="maximumSize">
+           <size>
+            <width>60</width>
+            <height>20</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
+          <property name="toolTip">
+           <string>Mano Media (D)</string>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background: #70bde7;</string>
+          </property>
+          <property name="text">
+           <string>MM</string>
+          </property>
+          <property name="shortcut">
+           <string>D</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="6">
+         <spacer name="horizontalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="0" column="0">
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="0" column="4">
+         <widget class="QPushButton" name="pbtFuerza2">
+          <property name="maximumSize">
+           <size>
+            <width>60</width>
+            <height>20</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
+          <property name="toolTip">
+           <string>Mano Débil (F)</string>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background: #cfefff;</string>
+          </property>
+          <property name="text">
+           <string>MD</string>
+          </property>
+          <property name="shortcut">
+           <string>F</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QPushButton" name="pbtFuerza5">
+          <property name="maximumSize">
+           <size>
+            <width>60</width>
+            <height>20</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
+          <property name="toolTip">
+           <string>Mano Muy Fuerte (A)</string>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background: #001d5a; color: #fff;</string>
+          </property>
+          <property name="text">
+           <string>MMF</string>
+          </property>
+          <property name="shortcut">
+           <string>A</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="QPushButton" name="pbtFuerza4">
+          <property name="maximumSize">
+           <size>
+            <width>60</width>
+            <height>20</height>
+           </size>
+          </property>
+          <property name="font">
+           <font>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
+          <property name="toolTip">
+           <string>Mano Fuerte (S)</string>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background: #0971b8</string>
+          </property>
+          <property name="text">
+           <string>MF</string>
+          </property>
+          <property name="shortcut">
+           <string>S</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
     </widget>
    </widget>
   </widget>
